# tropical-gemm

./: .gitignore  bench_julia_vs_rust.jl  sanity_julia.jl
.claude/skills/: issue-to-pr.md
.github/workflows/: pr-automation.yml
CountingTropicalGEMM.jl/: Project.toml  README.md
CountingTropicalGEMM.jl/bench/: RESULTS.md  bench.jl  bench_huge.jl  bench_mul.jl
CountingTropicalGEMM.jl/src/: CountingTropicalGEMM.jl
CountingTropicalGEMM.jl/test/: runtests.jl
crates/tropical-gemm/: Cargo.toml
crates/tropical-gemm-cuda/: Cargo.toml
crates/tropical-gemm-cuda/examples/: bench_counting.rs  bench_e2e_u64.rs  bench_kernel_aos.rs  bench_kernel_only.rs  bench_kernel_single.rs  bench_kernel_warpk.rs  bench_maxplus.rs  bench_warpk_crossover.rs
crates/tropical-gemm-cuda/kernels/: counting_gemm.cu
crates/tropical-gemm-cuda/src/: c_api.rs  context.rs  counting_kernel.rs  crt.rs  error.rs  gpu_mat.rs  lib.rs  matmul_mod.rs  pair.rs
crates/tropical-gemm-cuda/tests/: counting_gpu.rs
crates/tropical-gemm-python/: Cargo.toml
crates/tropical-gemm-python/src/: lib.rs
crates/tropical-gemm-python/tests/: test_count_ground_states.py  test_count_ground_states_gpu.py
crates/tropical-gemm/src/: api.rs  crt.rs  lib.rs
crates/tropical-gemm/src/core/: gemm.rs  kernel.rs  packing.rs
crates/tropical-gemm/src/mat/: ops.rs  owned.rs  ref_.rs
crates/tropical-gemm/src/simd/: dispatch.rs
crates/tropical-gemm/src/simd/kernels/: avx2.rs  neon.rs  portable.rs
crates/tropical-gemm/src/testing/: bigint_semiring.rs  mod.rs
crates/tropical-gemm/src/types/: and_or.rs  counting.rs  direction.rs  max_mul.rs  max_plus.rs  min_plus.rs  mod.rs  modp.rs  traits.rs
crates/tropical-gemm/tests/: counting_compose.rs  counting_crt.rs
docs/superpowers/plans/: 2026-04-21-counting-kernel-tiled-plan.md  2026-04-21-counting-tropical-compose-plan.md  2026-04-21-counting-tropical-crt-plan.md  2026-04-21-counting-tropical-cuda-plan.md  2026-04-28-cleanup-and-tn-flags-plan.md  2026-04-28-mod-p-counting-tropical-julia-plan.md  2026-04-28-tiled-counting-gemm-plan.md  2026-04-29-cp-async-double-buffer-plan.md
docs/superpowers/reports/: 2026-04-30-counting-tropical-gemm-perf-report.md
docs/superpowers/specs/: 2026-04-21-counting-kernel-tiled-design.md  2026-04-27-julia-binding-design.md  (+12 more)
examples/: Manifest.toml  Project.toml  README.md  bench_kernel_vs_julia.jl  bench_u32_probe.jl  spin_glass_demo.jl
