[package]
name = "tropical-gemm-cuda"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CUDA backend for tropical matrix multiplication"
keywords = ["tropical", "cuda", "gpu", "matrix", "gemm"]
categories = ["algorithms", "mathematics", "science"]
readme = "../../README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
tropical-gemm = { workspace = true }
cudarc = { workspace = true }
thiserror = { workspace = true }
once_cell = "1.19"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = "0.8"

[[bench]]
name = "tropical_ad_bench"
harness = false
