[package]
name = "tropical-gemm-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python bindings for tropical matrix multiplication"

[lib]
name = "_core"
crate-type = ["cdylib"]
doc = false  # Docs conflict with tropical-gemm crate; use Python docstrings instead

[features]
default = []
cuda = ["tropical-gemm-cuda", "dlpark"]

[dependencies]
tropical-gemm.workspace = true
tropical-gemm-cuda = { workspace = true, optional = true }
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
dlpark = { version = "0.5", features = ["pyo3"], optional = true }
num-bigint = "0.4"
